tests/baselines/reference/enumAssignmentCompat3.errors.txt
enumAssignmentCompat3.ts(40,17): error TS2567: Enum declarations can only merge with namespace declarations.
enumAssignmentCompat3.ts(43,17): error TS2567: Enum declarations can only merge with namespace declarations.
enumAssignmentCompat3.ts(68,1): error TS2322: Type 'Abcd.E' is not assignable to type 'First.E'.
  Property 'd' is missing in type 'First.E'.
enumAssignmentCompat3.ts(70,1): error TS2322: Type 'Cd.E' is not assignable to type 'First.E'.
  Each declaration of 'E.c' differs in its value, where '2' was expected but '0' was given.
enumAssignmentCompat3.ts(71,1): error TS2322: Type 'Nope' is not assignable to type 'E'.
enumAssignmentCompat3.ts(72,1): error TS2322: Type 'Decl.E' is not assignable to type 'First.E'.
  Each declaration of 'E.c' differs in its value, where '2' was expected but '3' was given.
enumAssignmentCompat3.ts(75,1): error TS2322: Type 'First.E' is not assignable to type 'Ab.E'.
  Property 'c' is missing in type 'Ab.E'.
enumAssignmentCompat3.ts(76,1): error TS2322: Type 'First.E' is not assignable to type 'Cd.E'.
  Property 'a' is missing in type 'Cd.E'.
enumAssignmentCompat3.ts(77,1): error TS2322: Type 'E' is not assignable to type 'Nope'.
enumAssignmentCompat3.ts(78,1): error TS2322: Type 'First.E' is not assignable to type 'Decl.E'.
  Each declaration of 'E.c' differs in its value, where '3' was expected but '2' was given.
enumAssignmentCompat3.ts(82,1): error TS2322: Type 'Const.E' is not assignable to type 'First.E'.
enumAssignmentCompat3.ts(83,1): error TS2322: Type 'First.E' is not assignable to type 'Const.E'.
enumAssignmentCompat3.ts(87,1): error TS2322: Type 'E.a | E.b' is not assignable to type 'E'.
  Type 'E.a' is not assignable to type 'E'.


==== enumAssignmentCompat3.ts (13 errors) ====
    namespace First {
        export enum E {
            a, b, c,
        }
    }
    namespace Abc {
        export enum E {
            a, b, c,
        }
        export enum Nope {
            a, b, c,
        }
    }
    namespace Abcd {
        export enum E {
            a, b, c, d,
        }
    }
    namespace Ab {
        export enum E {
            a, b,
        }
    }
    namespace Cd {
        export enum E {
            c, d,
        }
    }
    namespace Const {
        export const enum E {
            a, b, c,
        }
    }
    namespace Decl {
        export declare enum E {
            a, b, c = 3,
        }
    }
    namespace Merged {
        export enum E {
                    ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
            a, b, 
        }
        export enum E {
                    ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
            c = 3, d,
        }
    }
    
    namespace Merged2 {
        export enum E {
            a, b, c
        }
        export module E {
            export let d = 5;
        }
    }
    
    var abc: First.E;
    var secondAbc: Abc.E;
    var secondAbcd: Abcd.E;
    var secondAb: Ab.E;
    var secondCd: Cd.E;
    var nope: Abc.Nope;
    var k: Const.E;
    var decl: Decl.E;
    var merged: Merged.E;
    var merged2: Merged2.E;
    abc = secondAbc; // ok
    abc = secondAbcd; // missing 'd'
    ~~~
!!! error TS2322: Type 'Abcd.E' is not assignable to type 'First.E'.
!!! error TS2322:   Property 'd' is missing in type 'First.E'.
    abc = secondAb; // ok
    abc = secondCd; // missing 'd'
    ~~~
!!! error TS2322: Type 'Cd.E' is not assignable to type 'First.E'.
!!! error TS2322:   Each declaration of 'E.c' differs in its value, where '2' was expected but '0' was given.
    abc = nope; // nope!
    ~~~
!!! error TS2322: Type 'Nope' is not assignable to type 'E'.
    abc = decl; // bad - value of 'c' differs between these enums
    ~~~
!!! error TS2322: Type 'Decl.E' is not assignable to type 'First.E'.
!!! error TS2322:   Each declaration of 'E.c' differs in its value, where '2' was expected but '3' was given.
    secondAbc = abc; // ok
    secondAbcd = abc; // ok
    secondAb = abc; // missing 'c'
    ~~~~~~~~
!!! error TS2322: Type 'First.E' is not assignable to type 'Ab.E'.
!!! error TS2322:   Property 'c' is missing in type 'Ab.E'.
    secondCd = abc; // missing 'a' and 'b'
    ~~~~~~~~
!!! error TS2322: Type 'First.E' is not assignable to type 'Cd.E'.
!!! error TS2322:   Property 'a' is missing in type 'Cd.E'.
    nope = abc; // nope!
    ~~~~
!!! error TS2322: Type 'E' is not assignable to type 'Nope'.
    decl = abc; // bad - value of 'c' differs between these enums
    ~~~~
!!! error TS2322: Type 'First.E' is not assignable to type 'Decl.E'.
!!! error TS2322:   Each declaration of 'E.c' differs in its value, where '3' was expected but '2' was given.
    
    // const is only assignable to itself
    k = k;
    abc = k; // error
    ~~~
!!! error TS2322: Type 'Const.E' is not assignable to type 'First.E'.
    k = abc;
    ~
!!! error TS2322: Type 'First.E' is not assignable to type 'Const.E'.
    
    // merged enums compare all their members
    abc = merged; // missing 'd'
    merged = abc; // bad - value of 'c' differs between these enums
    ~~~~~~
!!! error TS2322: Type 'E.a | E.b' is not assignable to type 'E'.
!!! error TS2322:   Type 'E.a' is not assignable to type 'E'.
    abc = merged2; // ok
    merged2 = abc; // ok